# simple_quad_gazebo

./: .gitignore  LICENSE  README.md
src/simple_quad/: CMakeLists.txt  package.xml
src/simple_quad/config/: ekf.yaml  navigation.yaml  slam.yaml
src/simple_quad/include/simple_quad/: gazebo_ros_hand_of_god_odom.hpp  gazebo_ros_simple_quad.hpp
src/simple_quad/launch/: display.launch.py  navigation.launch.py  slam.launch.py
src/simple_quad/rviz/: urdf_config.rviz
src/simple_quad/src/: gazebo_ros_hand_of_god_odom.cpp  gazebo_ros_simple_quad.cpp
src/simple_quad/src/description/: simple_quad.urdf
src/simple_quad/world/: my_world.sdf
src/simple_quad/world/textures/: texture_001.material  texture_002.material  texture_003.material  texture_004.material  texture_005.material  texture_006.material  texture_007.material  texture_008.material  texture_009.material  texture_010.material
